apply Spring Security OAuth2 by default

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=none
 #user credential
 security.user.name=user1
 security.user.password=1234
+
+#client credential
+security.oauth2.client.client-id=client1
+security.oauth2.client.client-secret=1234
