apply JdbcTokenStore: AuthorizationServer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,6 @@ security.user.name=user1
 security.user.password=1234
 
 #client credential
-security.oauth2.client.client-id=client1
-security.oauth2.client.client-secret=1234
+#security.oauth2.client.client-id=client1
+#security.oauth2.client.client-secret=1234
+security.oauth2.authorization.check-token-access: isAuthenticated()
